--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,21 @@
     <string name="next_button">Next</string>
     <string name="correct_toast">Correct!</string>
     <string name="incorrect_toast">Incorrect!</string>
+    <string name="show_answer">See Answers</string>
+    <string name="warning_text">Warning!</string>
+    <string name="show_answer_button">Show Answer</string>
+    <string name="cheat_button">Cheat</string>
+    <string name="judgment_toast">CHEATER!!!</string>
+    <string name="q_canberra_is_the_capital_of_australia">Q:Canberra is the capital of Australia?</string>
+
+    <string name="a_true">A:True</string>
+    <string name="q_the_pacific_ocean_is_larger_than_the_atlantic_ocean">Q:The Pacific Ocean is larger than the Atlantic Ocean?</string>
+    <string name="q_the_suez_canal_connects_the_red_sea_and_the_indian_ocean">Q:The Suez Canal connects the Red Sea and the Indian Ocean?</string>
+
+    <string name="q_the_source_of_the_nile_river_is_in_egypt">Q:The source of the Nile River is in Egypt?</string>
+    <string name="a_false">A:False</string>
+    <string name="q_the_amazon_river_is_the_longest_river_in_the_americas">Q:The Amazon River is the longest river in the Americas?</string>
+
+    <string name="q_lake_baikal_is_the_world_s_oldest_and_deepest_freshwater_lake">Q:Lake Baikal is the world\'s oldest and deepest freshwater lake?</string>
+
 </resources>
