--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,7 @@
     <string name="next_button">Next</string>
     <string name="correct_toast">Correct!</string>
     <string name="incorrect_toast">Incorrect!</string>
+    <string name="warning_text">warning_text</string>
+    <string name="show_answer_button">show ansear button</string>
+    <string name="cheat_button">stringcheatbutton</string>
 </resources>
