--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,20 @@
     <string name="next_button">Next</string>
     <string name="correct_toast">Correct!</string>
     <string name="incorrect_toast">Incorrect!</string>
+    <string name="warning_text">Are you sure you want to do this?</string>
+    <string name="show_answer_button">Show Answer</string>
+    <string name="cheat_button">Cheat!</string>
+    <string name="judgment_toast">Cheating is wrong.</string>
+    Lake Baikal is the world\'s oldest and deepest
+    freshwater lake.<string name="checkedtextview">Answers:
+       Canberra is the capital of Australia: true
+        The Suez Canal connects the Red Sea
+        and the Indian Ocean: true
+        he source of the Nile River is in Egypt: false),
+        The Amazon River is the longest river
+        in the Americas: false
+        Lake Baikal is the world's oldest and deepest
+        freshwater lake: true
+    </string>
+
 </resources>
